Create pretty header

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Raleway:300" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React Quiz</title>
+    <title>Chem Fam</title>
   </head>
   <body>
     <div id="root"></div>
