--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Raleway:300" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chem Fam</title>
